<resources>
    <string name="app_name">TalkerApp</string>
    <string name="user_mail_com">user@mail.com</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_msg_send">Send</string>
    <string name="user_search">Search</string>
    <string name="btn_update_account">Update Account</string>
    <string name="btn_change_password">Change Password</string>
    <string name="btn_delete_account">Delete Account</string>
</resources>
